# CCompiler

./: .gitignore  CMakeLists.txt  build_script.sh  test.c  todo
.cache/clangd/index/: helpers.c.F6A7886A49447CFE.idx  lexer.c.5735A26AF604E5E1.idx  lexer.h.AC5A952CDE2C5428.idx  logger.c.5064EE73082EC327.idx  logger.h.9C0DD3D1BCDEC95E.idx  main.c.D19A2A14BE866181.idx  node.c.484D36803D156A29.idx  node.h.D36065E2DC7EB972.idx  object.c.B07331CDDA26F675.idx  object.h.AB977F8003D26943.idx  parser.c.8890F13643EC03CB.idx  parser.h.B6F562AE0BB843E4.idx  structs.h.86F8FF9478CA16D8.idx  token.c.7F7011BDFE163C50.idx  token.h.A00039449553D1E8.idx
source/: binary_op.c  binary_op.h  files.c  files.h  generate_stacks.py  globals.c  helpers.c  helpers.h  lexer.c  lexer.h  logger.c  logger.h  macros.h  main.c  node.c  node.h  parser.c  parser.h  structs.h  token.c  token.h  unary_op.c  unary_op.h
source/ast/: node.c  node.h  node_mem.c  node_mem.h  node_size.c  node_size.h  parser.c  parser.h
source/codegen/: asm_node.c  asm_node.h  asm_node_mem.c  asm_node_mem.h  asm_node_size.c  asm_node_size.h  codegen.c  codegen.h  registers.c  registers.h
source/lib/: lib_assert.h
source/lib/short_vec/: generate_short_vec.py  short_vec.h  short_vec_v_table.c
source/lib/short_vec/templates/: short_vec_4_char.c  short_vec_4_double.c  short_vec_4_int.c
source/tac/: tac_node.c  tac_node.h  tac_node_mem.c  tac_node_mem.h  tac_node_size.c  tac_node_size.h  tac_parse.c  tac_parse.h
tests/: 1p1p1.c  big_boy.c
tests/bookTestParseInvalid/: missing_const.c  unclosed_paren.c  wrong_order.c
tests/bookTestParseInvalidPrefix/: extra_junk.c  extra_paren.c  missing_semicolon.c  nested_missing_const.c  parenthesize_operand.c
tests/bookTestParseValid/: bitwise  bitwise.s  bitwise_zero  bitwise_zero.s  neg  neg.s  neg_zero  neg_zero.s  negate_int_max  negate_int_max.s  parens.s  parens_2  parens_2.s  redundant_parens  redundant_parens.s
tests/lib/: short_vec_test.c
tests_retired_for_now/: malformed_main.c  return_stmt.c
